--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,1 +1,6 @@
-v0.1, 2011-10-12 -- Initial release.
+Change log
+==========
+
+0.1 2011-10-12 Eric V. Smith
+----------------------------
+Initial release.
