Renamed default_default to just default. It's less confusing.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ x.y
 ----------------------------
 * Added "python setup.py test" support to run unittests.
 * Improve documentation examples.
+* Renamed "default_default" to just "default".
 
 0.2 2011-10-13 Eric V. Smith
 ----------------------------
