Add test for iterables, instead of just lists.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,7 @@ x.y
 * Renamed "default_default" to just "default".
 * Expose "NO_DEFAULT".
 * Support mapping objects in addition to strings and lists for field_names.
+* Add tests for iterables, not just lists, for field_names.
 
 0.2 2011-10-13 Eric V. Smith
 ----------------------------
